Fix header layout and align catalog spacing to design

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,16 +41,19 @@ img {
   width: 1440px;
   height: 100%;
   margin: 0 auto;
-  padding: 0 64px;
+  padding:0 64px;
+  
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 450px;
+  
 }
 
-.logo img {
+.logo {
   width: 136px;
   height: 16px;
+ 
 }
 
 .nav {
@@ -150,7 +153,7 @@ img {
 
 .catalogInner {
   width: 1440px;
-  padding: 120px 64px 148px;
+  padding: 48px 64px 148px;
 
   display: flex;
   gap: 64px;
@@ -182,7 +185,7 @@ img {
 ========================= */
 
 .details-page {
-  padding: 120px 120px 148px;
+  padding: 48px 64px 148px;
   max-width: 1440px;
   margin: 0 auto;
 }
